added the signup question

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Asa</title>
+    <title>heterodox</title>
     <style>
       * { box-sizing: border-box; }
       body { margin: 0; font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial; background:#0b0c10; color:#eaf1f1; }
