--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="collection of good questions, curated by humans" />
+    <meta property="og:title" content="Good Questions" />
+    <meta property="og:description" content="collection of good questions, curated by humans" />
+    <meta property="og:image" content="/src/assets/goodquestions.png" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Good Questions" />
+    <meta name="twitter:description" content="collection of good questions, curated by humans" />
+    <meta name="twitter:image" content="/src/assets/goodquestions.png" />
     <title>Good Questions</title>
   </head>
   <body>
